--- a/crud_api/package.json
+++ b/crud_api/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-form-data": "^2.0.17",
+    "gm": "^1.23.1",
+    "graphicsmagick": "0.0.1",
     "http-proxy-middleware": "^1.0.6",
+    "imagemagick": "^0.1.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
