--- a/crud_api/package.json
+++ b/crud_api/package.json
@@ -20,6 +20,7 @@
     "graphicsmagick": "0.0.1",
     "http-proxy-middleware": "^1.0.6",
     "imagemagick": "^0.1.3",
+    "json-2-csv": "^3.14.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
@@ -29,5 +30,6 @@
     "sequelize": "^6.5.0",
     "stopwords-ru": "^0.3.0",
     "xlsx": "^0.17.0"
-  }
+  },
+  "type": "module"
 }
